https://jira.fingo.info/browse/PRAK-187 Allow to add multiple postfixes for teams in AD