@@ -10,6 +10,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
+
 import javax.naming.directory.SearchResult;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -22,7 +23,7 @@ public class ActiveDirectoryTeamSynchronizer {
     private String usersGroup;
 
     @Value("${ad.identifiers.team}")
-    private String teamIdentifier;
+    private List<String> teamIdentifiers;
 
     @Value("${ad.identifiers.business-part}")
     private String businessPartIdentifier;
@@ -46,28 +47,30 @@ public class ActiveDirectoryTeamSynchronizer {
         var dbTeams = teamRepository.findAllAdNames();
         pickBusinessPartsFromAD().forEach(adBusinessPart ->
                 pickTeamsFromAD(adBusinessPart).stream()
-                        .filter(adTeam ->
-                                !ActiveDirectoryUtils.pickAttribute(
-                                        adTeam, Attribute.DISTINGUISHED_NAME).equals(usersGroup))
-                        .filter(adTeam ->
-                                !dbTeams.contains(
-                                        ActiveDirectoryUtils.pickAttribute(adTeam, Attribute.DISTINGUISHED_NAME)))
+                        .filter(adTeam -> !isTeamAUsersGroup(adTeam))
+                        .filter(adTeam -> !dbTeams.contains(adNameOf(adTeam)))
                         .map(adTeam -> teamMapper.mapToTeam(adTeam, adBusinessPart))
                         .forEach(teamRepository::save));
         LOGGER.info("Synchronisation succeed: find new teams");
+    }
+
+    private boolean isTeamAUsersGroup(SearchResult adTeam) {
+        return adNameOf(adTeam).equals(usersGroup);
+    }
+
+    private String adNameOf(SearchResult searchResult) {
+        return ActiveDirectoryUtils.pickAttribute(searchResult, Attribute.DISTINGUISHED_NAME);
     }
 
     public void removeDeletedTeams() {
         var adTeams = pickBusinessPartsFromAD().stream()
                 .map(this::pickTeamsFromAD)
                 .flatMap(Collection::stream)
-                .map(team ->
-                        ActiveDirectoryUtils.pickAttribute(team, Attribute.DISTINGUISHED_NAME))
-                .collect(Collectors.toList());
+                .map(this::adNameOf)
+                .toList();
 
         teamRepository.findAll().stream()
-                .filter(team ->
-                        !adTeams.contains(team.getAdName()))
+                .filter(team -> !adTeams.contains(team.getAdName()))
                 .forEach(teamRepository::delete);
         LOGGER.info("Synchronisation succeed: remove deleted teams");
     }
@@ -75,11 +78,11 @@ public class ActiveDirectoryTeamSynchronizer {
     public void synchronize() {
         pickBusinessPartsFromAD().forEach(adBusinessPart ->
                 pickTeamsFromAD(adBusinessPart).forEach(adTeam -> {
-                    var adName = ActiveDirectoryUtils.pickAttribute(adTeam, Attribute.DISTINGUISHED_NAME);
-                    var optionalTeam = teamRepository.findFirstByAdName(adName);
-                    optionalTeam.ifPresent(team -> teamRepository.save(
-                            teamMapper.mapToTeam(adTeam, team, adBusinessPart)
-                    ));
+                    var adName = adNameOf(adTeam);
+                    teamRepository.findFirstByAdName(adName).ifPresent(team -> {
+                        var updatedTeam = teamMapper.mapToTeam(adTeam, team, adBusinessPart);
+                        teamRepository.save(updatedTeam);
+                    });
                 })
         );
         LOGGER.info("Synchronisation succeed: update all teams");
@@ -87,9 +90,8 @@ public class ActiveDirectoryTeamSynchronizer {
 
     public void assignUsersToTeams() {
         this.pickTeamsFromAD().forEach(adTeam -> {
-            var adName = ActiveDirectoryUtils.pickAttribute(adTeam, Attribute.DISTINGUISHED_NAME);
-            var optionalTeam = teamRepository.findFirstByAdName(adName);
-            optionalTeam.ifPresent(team -> {
+            var adName = adNameOf(adTeam);
+            teamRepository.findFirstByAdName(adName).ifPresent(team -> {
                var membersAsString = ActiveDirectoryUtils.pickAttribute(adTeam, Attribute.MEMBER);
                var members = splitMembers(membersAsString);
                team.setUsers(members);
@@ -109,6 +111,13 @@ public class ActiveDirectoryTeamSynchronizer {
     }
 
     private List<SearchResult> pickTeamsFromAD() {
+        return teamIdentifiers.stream()
+                .map(this::pickTeamsFromAD)
+                .flatMap(Collection::stream)
+                .toList();
+    }
+
+    private List<SearchResult> pickTeamsFromAD(String teamIdentifier) {
         return activeDirectory.newSearch()
                 .objectClass(ActiveDirectoryObjectClass.Group)
                 .name(String.format("*%s", teamIdentifier))
@@ -116,11 +125,18 @@ public class ActiveDirectoryTeamSynchronizer {
     }
 
     private List<SearchResult> pickTeamsFromAD(SearchResult adBusinessPart) {
-        var businessPartAdName = ActiveDirectoryUtils.pickAttribute(adBusinessPart, Attribute.DISTINGUISHED_NAME);
+        var adBusinessPartName = adNameOf(adBusinessPart);
+        return teamIdentifiers.stream()
+                .map(teamIdentifier -> pickTeamsFromADBusinessPart(teamIdentifier, adBusinessPartName))
+                .flatMap(Collection::stream)
+                .toList();
+    }
+
+    private List<SearchResult> pickTeamsFromADBusinessPart(String teamIdentifier, String adBusinessPartName) {
         return activeDirectory.newSearch()
                 .objectClass(ActiveDirectoryObjectClass.Group)
-                .name("*" + this.teamIdentifier)
-                .memberOf(businessPartAdName)
+                .name("*" + teamIdentifier)
+                .memberOf(adBusinessPartName)
                 .search();
     }
 
